# mini-infer

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ROADMAP.md
include/mini_infer/: ops.h  tensor.h
scripts/: export_mlp.py
src/: main.cpp  tensor.cpp
src/ops/: matmul.cpp  relu.cpp
tests/: test_mlp_accuracy.cpp
